create Museum landing page

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,591 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Національний художній музей України</title>
+
+    <link
+      rel="icon"
+      type="image"
+      href="./images/logo.svg"
+    />
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <header
+      id="header"
+      class="header"
+    >
+      <div class="header__image"></div>
+
+      <div class="page__container">
+        <div class="header__container">
+          <div class="header__top">
+            <a
+              class="header__logo-link"
+              href="#"
+            >
+              <img
+                class="header__logo"
+                src="./images/logo.svg"
+                alt="logo"
+              />
+            </a>
+
+            <div
+              class="header__icon-menu icon icon--menu"
+              id="menu-open"
+            ></div>
+          </div>
+
+          <div class="header__content">
+            <h1 class="header__heading heading-1">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+            <a
+              class="header__button-primary button-primary"
+              href="#exhibitions"
+            >
+              <span class="button-primary__text button-text">КВИТКИ</span>
+              <div class="button-primary__icon-wrapper icon__arrov-wrapper">
+                <div class="button-primary__icon icon icon--arrow-white"></div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <aside
+      id="menu"
+      class="menu"
+    >
+      <div class="menu__wrapper">
+        <div class="page__container">
+          <div class="menu__content">
+            <div class="menu__nav-wrapper">
+              <div
+                class="menu__icon-close icon icon--close"
+                id="menu-close"
+              ></div>
+              <nav class="nav menu__nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a
+                      class="nav__link nav-text nav-text--menu"
+                      href="#gallery"
+                    >
+                      Галерея
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a
+                      class="nav__link nav-text nav-text--menu"
+                      href="#sing-up"
+                    >
+                      Про Нас
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a
+                      class="nav__link nav-text nav-text--menu"
+                      href="#exhibitions"
+                    >
+                      Виставки та події
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a
+                      class="nav__link nav-text nav-text--menu"
+                      href="#contacts"
+                    >
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+
+            <div class="menu__schedule schedule">
+              <p class="schedule__label secondary-text">Графік роботи</p>
+
+              <div class="schedule__summary">
+                <div class="schedule__summary-working-days">
+                  <ul class="schedule__summary-working-days-items">
+                    <li
+                      class="schedule__summary-working-days-item secondary-text"
+                    >
+                      <span class="secondary-text--bold">12:00 — 20:00</span>
+                      середа
+                    </li>
+                    <li
+                      class="schedule__summary-working-days-item secondary-text"
+                    >
+                      <span class="secondary-text--bold">12:00 — 20:00</span>
+                      четвер
+                    </li>
+                    <li
+                      class="schedule__summary-working-days-item secondary-text"
+                    >
+                      <span class="secondary-text--bold">12:00 — 20:00</span>
+                      п’ятниця
+                    </li>
+                    <li
+                      class="schedule__summary-working-days-item secondary-text"
+                    >
+                      <span class="secondary-text--bold">11:00 — 19:00</span>
+                      субота
+                    </li>
+                    <li
+                      class="schedule__summary-working-days-item secondary-text"
+                    >
+                      <span class="secondary-text--bold">11:00 — 19:00</span>
+                      неділя
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="schedule__summary-weekend-wrapper secondary-text">
+                  <span class="schedule__summary-weekend secondary-text--bold">
+                    Вихідні:
+                  </span>
+                  понеділок, вівторок
+                  <br />
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <section
+      id="exhibitions"
+      class="exhibitions"
+    >
+      <div class="page__container">
+        <h2 class="exhibitions__heading heading-2">Актуальні події</h2>
+
+        <div class="exhibitions__exhibition-items">
+          <div class="exhibition">
+            <div class="exhibition__img-wrapper">
+              <img
+                class="exhibition__img"
+                src="./images/exhibition/image-1.png"
+                alt="image-1"
+              />
+            </div>
+            <div class="exhibition__label-wrapper">
+              <p class="exhibition__label label-text">ВИСТАВКА</p>
+              <span class="exhibition__date date-text">26.08-29.11.2019</span>
+            </div>
+            <div class="exhibition__name-wrapper">
+              <h3 class="exhibition__name heading-3">Йду і повертаюсь</h3>
+              <div
+                class="exhibition__name-square"
+                href="#"
+              ></div>
+            </div>
+            <p class="exhibition__description main-text">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку-українське мистецтво другої половини 1980-1995
+              років.
+            </p>
+          </div>
+
+          <div class="exhibition">
+            <div class="exhibition__img-wrapper">
+              <img
+                class="exhibition__img"
+                src="./images/exhibition/image-2.png"
+                alt="image-2"
+              />
+            </div>
+            <div class="exhibition__label-wrapper">
+              <p class="exhibition__label label-text">ВИСТАВКА</p>
+              <span class="exhibition__date date-text">26.08-29.11.2019</span>
+            </div>
+            <div class="exhibition__name-wrapper">
+              <h3 class="exhibition__name heading-3">І спогади і мрії</h3>
+              <div
+                class="exhibition__name-square"
+                href="#"
+              ></div>
+            </div>
+            <p class="exhibition__description main-text">
+              Національний художній музей України до 100 річчя від дня
+              народження видатноукраїнської художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставк«І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section
+      id="lections"
+      class="lections"
+    >
+      <div class="lections__lection lection">
+        <div class="lection__img-wrapper">
+          <img
+            class="lection__img"
+            src="./images/lection/image-1.png"
+            alt="image-1"
+          />
+        </div>
+        <div class="lection__content">
+          <div class="lection__label-wrapper">
+            <p class="lection__label label-text">ЛЕКЦІЯ</p>
+            <span class="lection__date date-text">26/08/2019 - 11:00</span>
+          </div>
+          <h3 class="lection__name heading-3">Від класицизму до романтизму</h3>
+        </div>
+      </div>
+    </section>
+
+    <section
+      id="gallery"
+      class="gallery"
+    >
+      <div class="gallery__container">
+        <h2 class="gallery__heading heading-2">Галерея</h2>
+
+        <div class="swiper gallery__swiper">
+          <div class="swiper-wrapper gallery__img-container">
+            <div
+              class="gallery__img-wrapper gallery__img-wrapper--small-long swiper-slide"
+            >
+              <img
+                class="gallery__img"
+                src="./images/galery/image-1.png"
+                alt="image-1"
+              />
+            </div>
+            <div
+              class="gallery__img-wrapper gallery__img-wrapper--wide-long swiper-slide"
+            >
+              <img
+                class="gallery__img"
+                src="./images/galery/image-2.png"
+                alt="image-1"
+              />
+            </div>
+            <div
+              class="gallery__img-wrapper gallery__img-wrapper--wide-short swiper-slide"
+            >
+              <img
+                class="gallery__img"
+                src="./images/galery/image-3.png"
+                alt="image-1"
+              />
+            </div>
+            <div
+              class="gallery__img-wrapper gallery__img-wrapper--small-short swiper-slide"
+            >
+              <img
+                class="gallery__img"
+                src="./images/galery/image-4.png"
+                alt="image-1"
+              />
+            </div>
+          </div>
+          <div class="swiper-pagination gallery__swiper-pagination"></div>
+        </div>
+      </div>
+    </section>
+
+    <section
+      id="sing-up"
+      class="sing-up"
+    >
+      <div class="sing-up__wrapper">
+        <div class="page__container">
+          <div class="sing-up__content">
+            <h2 class="sing-up__heading heading-2">Підписка</h2>
+
+            <p class="sing-up__description sign-up-text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+              class="sing-up__form form"
+              onsubmit="this.reset(); return false;"
+            >
+              <input
+                type="email"
+                class="sing-up__form-input form__input form-text"
+                name="email"
+                placeholder="E-mail"
+                size="1"
+                required
+              />
+              <button
+                class="sing-up__form-button form__button"
+                href="/"
+              >
+                <div class="form__icon-wrapper icon__arrov-wrapper">
+                  <div class="form__icon icon icon--arrow-black"></div>
+                </div>
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer
+      id="footer"
+      class="footer"
+    >
+      <div class="page__container">
+        <div class="footer__content">
+          <div class="footer__logo-sosials-wrapper">
+            <a
+              class="footer__logo-link"
+              href="#"
+            >
+              <img
+                class="footer__logo"
+                src="./images/logo.svg"
+                alt="logo"
+              />
+            </a>
+
+            <div class="footer__socials">
+              <ul class="footer__socials-list">
+                <li class="footer__socials-item">
+                  <a
+                    class="footer__socials-link"
+                    href="https://www.facebook.com/namu.museum/"
+                    target="_blank"
+                  >
+                    <div class="footer__icon-wrapper icon__socials-wrapper">
+                      <span
+                        class="footer__socials-icon icon icon--facebook icon--static"
+                      ></span>
+                      <span
+                        class="footer__socials-icon icon icon--facebook-hover icon--hover"
+                      ></span>
+                    </div>
+                  </a>
+                </li>
+
+                <li class="footer__socials-item">
+                  <a
+                    class="footer__socials-link"
+                    href="https://www.instagram.com/namu.museum/"
+                    target="_blank"
+                  >
+                    <div class="footer__icon-wrapper icon__socials-wrapper">
+                      <span
+                        class="footer__socials-icon icon icon--instagram icon--static"
+                      ></span>
+                      <span
+                        class="footer__socials-icon icon icon--instagram-hover icon--hover"
+                      ></span>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer__schedule schedule">
+            <p class="schedule__label secondary-text">Графік роботи</p>
+
+            <div class="schedule__summary schedule__summary--footer">
+              <div class="schedule__summary-working-days">
+                <ul class="schedule__summary-working-days-items">
+                  <li
+                    class="schedule__summary-working-days-item secondary-text"
+                  >
+                    <span class="secondary-text--bold">12:00 — 20:00</span>
+                    середа
+                  </li>
+                  <li
+                    class="schedule__summary-working-days-item secondary-text"
+                  >
+                    <span class="secondary-text--bold">12:00 — 20:00</span>
+                    четвер
+                  </li>
+                  <li
+                    class="schedule__summary-working-days-item secondary-text"
+                  >
+                    <span class="secondary-text--bold">12:00 — 20:00</span>
+                    п’ятниця
+                  </li>
+                  <li
+                    class="schedule__summary-working-days-item secondary-text"
+                  >
+                    <span class="secondary-text--bold">11:00 — 19:00</span>
+                    субота
+                  </li>
+                  <li
+                    class="schedule__summary-working-days-item secondary-text"
+                  >
+                    <span class="secondary-text--bold">11:00 — 19:00</span>
+                    неділя
+                  </li>
+                </ul>
+              </div>
+
+              <div class="schedule__summary-weekend-wrapper secondary-text">
+                <span class="schedule__summary-weekend secondary-text--bold">
+                  Вихідні:
+                </span>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="footer__contacts contacts"
+            id="contacts"
+          >
+            <p class="contacts__label secondary-text">Контакти:</p>
+
+            <div class="contacts__item-wrapper">
+              <ul class="contacts__list">
+                <li class="contacts__item">
+                  <a
+                    class="contacts__link secondary-text"
+                    href="https://maps.app.goo.gl/hxVZ2bNffZmWCsAn6"
+                    target="_blank"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                </li>
+
+                <li class="contacts__item">
+                  <a
+                    class="contacts__link secondary-text"
+                    href="tel: +38 (044) 278-13-57"
+                  >
+                    тел. +38 (044) 278-13-57
+                  </a>
+                </li>
+
+                <li class="contacts__item">
+                  <a
+                    class="contacts__link secondary-text"
+                    href="fax: +38 (044) 278-74-54"
+                  >
+                    факс +38 (044) 278-74-54
+                  </a>
+                </li>
+
+                <li class="contacts__item">
+                  <a
+                    class="contacts__link secondary-text"
+                    href="mailto:info@namu.kiev.ua"
+                  >
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </li>
+              </ul>
+            </div>
+
+            <a
+              class="footer__scroll-up-link"
+              href="#"
+            >
+              <div class="footer__scroll-up-wrapper">
+                <span
+                  class="footer__scroll-up-icon footer__scroll-up-icon--static"
+                ></span>
+                <span
+                  class="footer__scroll-up-icon footer__scroll-up-icon-hover footer__scroll-up-icon--hover"
+                ></span>
+              </div>
+            </a>
+          </div>
+
+          <nav class="nav footer__nav">
+            <ul class="nav__list nav__list--footer">
+              <li class="nav__item">
+                <a
+                  class="nav__link nav__link--footer nav-text"
+                  href="#gallery"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  class="nav__link nav__link--footer nav-text"
+                  href="#sing-up"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  class="nav__link nav__link--footer nav-text"
+                  href="#exhibitions"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  class="nav__link nav__link--footer nav-text"
+                  href="#contacts"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="footer__copyright">
+            <p class="footer__copyright-item copyright-text">
+              Designed by Zhyriada Marina
+            </p>
+
+            <p class="footer__copyright-item copyright-text">
+              Copyright &copy 2019. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
