add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       </a>
 
       <div class="header-icons">
-        <a href="#menu" class="header-burger-menu">
+        <a href="#aside" class="header-burger-menu">
           <img
             src="./images/burger-menu.svg"
             alt="burger-menu"
@@ -75,7 +75,7 @@
       </div>
     </header>
 
-    <aside class="aside" id="menu">
+    <aside class="aside" id="aside">
       <div class="container">
         <div class="aside-container-for-grid">
           <div class="aside-top-bar">
@@ -304,15 +304,23 @@
                 placeholder="E-mail"
                 required
               >
+
+              <button type="submit" class="sign-up-contact-form-red-box">
+                <img
+                  src="./images/sign-up-red-box-arrow.png"
+                  alt="arrow"
+                  class="sign-up-contact-form-red-box-arrow"
+                >
+              </button>
             </form>
 
-            <a href="#" class="sign-up-red-box">
+            <!-- <a href="#" class="sign-up-red-box">
               <img
                 src="./images/sign-up-red-box-arrow.png"
                 alt="arrow"
                 class="sign-up-red-box-arrow"
               >
-            </a>
+            </a> -->
           </div>
         </div>
 
