add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,558 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
+
+    <link
+      rel="icon"
+      href="images/favicon.png"
+      type="image"
+    />
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
     <script src="scripts/main.js"></script>
+
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__photo"></div>
+
+          <div class="header__top">
+            <div class="header__icons">
+              <div class="header__burger">
+                <a
+                  href="#menu"
+                  class="header__burger--menu"
+                ></a>
+              </div>
+
+              <div class="header__logo">
+                <a
+                  href="#logo"
+                  class="header__logo--link"
+                >
+                  NA
+                  <br />
+                  MU
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="header__tittle">
+            <h1 class="header__tittle-content">ХУДОЖНІЙ МУЗЕЙ</h1>
+          </div>
+
+          <div class="header__search-form">
+            <input
+              class="header__search-form--text"
+              type="text"
+              placeholder="КВИТКИ"
+            />
+
+            <a
+              href="#Виставки та події"
+              class="header__search-form--button"
+            >
+              <img
+                src="./images/pointer_green.png"
+                alt="pointer"
+                class="header__search-form--photo"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="menu-nav__container">
+        <div class="menu-nav__close">
+          <a
+            href="#"
+            class="menu-nav__icon menu-nav__icon--close"
+          ></a>
+        </div>
+
+        <ul class="menu-nav__list menu-nav__list-left">
+          <li class="menu-nav__item">
+            <a
+              href="#Галерея"
+              class="menu-nav__link"
+            >
+              Галерея
+            </a>
+          </li>
+
+          <li class="menu-nav__item">
+            <a
+              href="#Виставки та події"
+              class="menu-nav__link"
+            >
+              Виставки та події
+            </a>
+          </li>
+        </ul>
+
+        <ul class="menu-nav__list menu-nav__list-right">
+          <li class="menu-nav__item">
+            <a
+              href="#Про_Нас"
+              class="menu-nav__link"
+            >
+              Про Нас
+            </a>
+          </li>
+
+          <li class="menu-nav__item">
+            <a
+              href="#Контакти"
+              class="menu-nav__link"
+            >
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="menu__schedule">
+        <h4 class="menu__schedule-title">Графік роботи</h4>
+
+        <ul class="menu__schedule-list">
+          <li class="menu__schedule-item">
+            <span class="bold">12:00 — 20:00</span>
+            середа
+          </li>
+          <li class="menu__schedule-item">
+            <span class="bold">12:00 — 20:00</span>
+            четвер
+          </li>
+          <li class="menu__schedule-item">
+            <span class="bold">12:00 — 20:00</span>
+            п’ятниця
+          </li>
+          <li class="menu__schedule-item">
+            <span class="bold">11:00 — 19:00</span>
+            субота
+          </li>
+          <li class="menu__schedule-item">
+            <span class="bold">11:00 — 19:00</span>
+            неділя
+          </li>
+        </ul>
+      </div>
+
+      <div class="menu__content">
+        <p class="menu__content-schedule">
+          <span class="bold">Вихідні:</span>
+          понеділок, вівторок
+          <br />
+          Каса припиняє роботу за 1 годину до закриття музею
+        </p>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <section
+            class="current-events"
+            id="Виставки та події"
+          >
+            <h2 class="section-title current-events__title">Актуальні події</h2>
+
+            <img
+              src="./images/іду-і-повертаюсь-tablet.png"
+              alt="current-events"
+              class="current-events__photo"
+            />
+
+            <article class="current-events__article">
+              <div class="exhibition">
+                <p class="exhibition__content">ВИСТАВКА</p>
+                <p class="exhibition__date">26.08-29.11.2019</p>
+              </div>
+
+              <div class="content">
+                <h3 class="content__title content__title-point">
+                  Йду і повертаюсь
+                </h3>
+                <p class="content__contents">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+
+            <img
+              src="./images/ш-спогади-і-мрії-tablet.png"
+              alt="current-events"
+              class="current-events__photo"
+            />
+
+            <article class="current-events__article">
+              <div class="exhibition">
+                <p class="exhibition__content">ВИСТАВКА</p>
+                <p class="exhibition__date">26.08-29.11.2019</p>
+              </div>
+
+              <div class="content">
+                <h3 class="content__title content__title-point">
+                  І спогади і мрії
+                </h3>
+                <p class="content__contents">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+          </section>
+
+          <section class="classicism">
+            <div class="classicism__photo"></div>
+
+            <article class="classicism__article">
+              <div class="exhibition exhibition-classicism">
+                <p class="exhibition__content">ЛЕКЦІЯ</p>
+                <p class="exhibition__date">26/08/2019 - 11:00</p>
+              </div>
+
+              <div class="content">
+                <h3 class="content__title content__title-classicism">
+                  Від класицизму до романтизму
+                </h3>
+              </div>
+            </article>
+          </section>
+
+          <section
+            class="gallery"
+            id="Галерея"
+          >
+            <h2 class="section-title gallery__title">Галерея</h2>
+
+            <div class="gallery__images">
+              <img
+                src="\images\gallery_1.png"
+                alt="gallery"
+                class="gallery__photo gallery__photo-1"
+              />
+
+              <img
+                src="\images\gallery_2.png"
+                alt="gallery"
+                class="gallery__photo gallery__photo-2"
+              />
+
+              <img
+                src="\images\gallery_3.png"
+                alt="gallery"
+                class="gallery__photo gallery__photo-3"
+              />
+
+              <img
+                src="\images\gallery_4.png"
+                alt="gallery"
+                class="gallery__photo gallery__photo-4"
+              />
+            </div>
+
+            <div class="gallery__slider">
+              <div class="gallery__slider-inputs">
+                <input
+                  class="gallery__slider-input gallery__slider-input1"
+                  type="radio"
+                  name="point"
+                  id="r1"
+                  checked
+                />
+                <input
+                  class="gallery__slider-input gallery__slider-input2"
+                  type="radio"
+                  name="point"
+                  id="r2"
+                />
+                <input
+                  class="gallery__slider-input gallery__slider-input3"
+                  type="radio"
+                  name="point"
+                  id="r3"
+                />
+                <input
+                  class="gallery__slider-input gallery__slider-input4"
+                  type="radio"
+                  name="point"
+                  id="r4"
+                />
+
+                <div class="slides gallery__slide s1">
+                  <img
+                    src="\images\gallery_1.png"
+                    alt="gallery"
+                    class="gallery__image"
+                  />
+                </div>
+
+                <div class="slides gallery__slide">
+                  <img
+                    src="\images\gallery_2.1.png"
+                    alt="gallery"
+                    class="gallery__image"
+                  />
+                </div>
+
+                <div class="slides gallery__slide">
+                  <img
+                    src="\images\gallery_3.png"
+                    alt="gallery"
+                    class="gallery__image"
+                  />
+                </div>
+
+                <div class="slides gallery__slide">
+                  <img
+                    src="\images\gallery_4.png"
+                    alt="gallery"
+                    class="gallery__image"
+                  />
+                </div>
+              </div>
+            </div>
+
+            <div class="gallery__navigation">
+              <label
+                class="gallery__navigation-label"
+                for="r1"
+              ></label>
+              <label
+                class="gallery__navigation-label"
+                for="r2"
+              ></label>
+              <label
+                class="gallery__navigation-label"
+                for="r3"
+              ></label>
+              <label
+                class="gallery__navigation-label"
+                for="r4"
+              ></label>
+            </div>
+          </section>
+
+          <section class="subscription">
+            <div class="subscription__photo"></div>
+            <h2 class="subscription__title">Підписка</h2>
+            <p class="subscription__content">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <div class="subscription__search-form">
+              <input
+                class="subscription__search-form--text"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+              />
+
+              <a
+                href="#Виставки та події"
+                class="subscription__search-form--button"
+              >
+                <img
+                  src="./images/pointer_red.png"
+                  alt="pointer"
+                  class="subscription__search-form--photo"
+                />
+              </a>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+
+    <footer
+      class="footer"
+      id="Про_Нас"
+    >
+      <div class="footer__head">
+        <div class="footer__logotype">
+          <div class="footer__logo">
+            <a
+              href="#logo"
+              class="footer__logo--link"
+            >
+              NA
+              <br />
+              MU
+            </a>
+          </div>
+
+          <div class="footer__socials">
+            <a
+              href="https://uk-ua.facebook.com/"
+              target="_blank"
+              class="footer__socials-logos"
+            >
+              <img
+                src="/images/facebook-letter-logo.png"
+                alt="facebook-logo"
+                class="footer__socials-image"
+              />
+            </a>
+
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="footer__socials-logos"
+            >
+              <img
+                src="/images/instagram-logo.png"
+                alt="facebook-logo"
+                class="footer__socials-image"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer__schedule">
+        <h4 class="footer__schedule-title">Графік роботи</h4>
+        <ul class="footer__schedule-list">
+          <li class="footer__schedule-item">12:00 — 20:00 середа</li>
+          <li class="footer__schedule-item">12:00 — 20:00 четвер</li>
+          <li class="footer__schedule-item">12:00 — 20:00 п’ятниця</li>
+          <li class="footer__schedule-item">11:00 — 19:00 субота</li>
+          <li class="footer__schedule-item">11:00 — 19:00 неділя</li>
+        </ul>
+
+        <p class="footer__schedule-content">
+          Вихідні: понеділок, вівторок
+          <br />
+          Каса припиняє роботу за 1 годину до закриття музею
+        </p>
+      </div>
+
+      <div
+        class="footer__contacts"
+        id="Контакти"
+      >
+        <h4 class="footer__contacts-title">Контакти:</h4>
+
+        <a
+          href="https://www.google.com.ua/maps"
+          target="_blank"
+          class="footer__contacts-link"
+        >
+          вул. М. Грушевського, 6; Київ, 01001
+        </a>
+
+        <a
+          href="tel: +38 (044) 278-13-57"
+          class="footer__contacts-link"
+        >
+          тел. +38 (044) 278-13-57
+        </a>
+
+        <a
+          href="tel: +38 (044) 278-74-54"
+          class="footer__contacts-link"
+        >
+          факс +38 (044) 278-74-54
+        </a>
+
+        <a
+          href="mailto: info@namu.kiev.ua "
+          target="_blank"
+          class="footer__contacts-link"
+        >
+          e-mail: info@namu.kiev.ua
+        </a>
+
+        <a
+          href="#"
+          class="footer__arrow-up"
+        ></a>
+      </div>
+
+      <ul class="footer-nav__list footer-nav__list-left">
+        <li class="footer-nav__item">
+          <a
+            href="#Галерея"
+            class="footer-nav__link"
+          >
+            Галерея
+          </a>
+        </li>
+
+        <li class="footer-nav__item">
+          <a
+            href="#Виставки та події"
+            class="footer-nav__link"
+          >
+            Виставки та події
+          </a>
+        </li>
+      </ul>
+
+      <ul class="footer-nav__list footer-nav__list-right">
+        <li class="footer-nav__item">
+          <a
+            href="#Про_Нас"
+            class="footer-nav__link"
+          >
+            Про Нас
+          </a>
+        </li>
+
+        <li class="footer-nav__item">
+          <a
+            href="#Контакти"
+            class="footer-nav__link"
+          >
+            Контакти
+          </a>
+        </li>
+      </ul>
+
+      <div class="footer__copyrite">
+        <div class="footer__copyrite-container">
+          <p class="footer__copyrite-content">Designed by Zhyriada Marina</p>
+          <p class="footer__copyrite-content">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
